--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,7 @@ install:
   - sudo add-apt-repository -y ppa:openjdk-r/ppa
   - sudo apt-get -qq update
   - sudo apt-get install -y openjdk-8-jdk --no-install-recommends
+  - sudo pip install --quiet --upgrade pip tox
 
 script:
   - tox
