--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,9 @@ jobs:
 env:
   - JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
 
+services:
+  - docker
+
 install:
   - sudo add-apt-repository -y ppa:openjdk-r/ppa
   - sudo apt-get -qq update
