--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ install:
   - sudo add-apt-repository -y ppa:openjdk-r/ppa
   - sudo apt-get -qq update
   - sudo apt-get install -y openjdk-8-jdk --no-install-recommends
-  - sudo pip install --quiet --upgrade pip tox
+  - sudo pip install --quiet --upgrade pip tox tox-travis
 
 script:
   - tox
