--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,7 @@ install:
   - sudo apt-get -qq update
   - sudo apt-get install -y openjdk-8-jdk --no-install-recommends
   - sudo pip install --quiet --upgrade pip tox tox-travis
+  - sudo mv /var/lib/docker/network/files/ /path/to/backup/docker-network-files
 
 script:
   - tox
