--- a/.travis.yml
+++ b/.travis.yml
@@ -38,11 +38,12 @@ services:
   - docker
 
 install:
+  - env | grep -i proxy
+  - mv /var/lib/docker /var/lib/docker.old
   - sudo add-apt-repository -y ppa:openjdk-r/ppa
   - sudo apt-get -qq update
   - sudo apt-get install -y openjdk-8-jdk --no-install-recommends
   - sudo pip install --quiet --upgrade pip tox tox-travis
-  - sudo mv /var/lib/docker/network/files/ /path/to/backup/docker-network-files
 
 script:
   - tox
