--- a/.travis.yml
+++ b/.travis.yml
@@ -38,8 +38,7 @@ services:
   - docker
 
 install:
-  - env | grep -i proxy
-  - mv /var/lib/docker /var/lib/docker.old
+  - docker ps -a
   - sudo add-apt-repository -y ppa:openjdk-r/ppa
   - sudo apt-get -qq update
   - sudo apt-get install -y openjdk-8-jdk --no-install-recommends
