--- a/.travis.yml
+++ b/.travis.yml
@@ -38,11 +38,12 @@ services:
   - docker
 
 install:
-  - docker ps -a
+  - docker run neo4j:latest
   - sudo add-apt-repository -y ppa:openjdk-r/ppa
   - sudo apt-get -qq update
   - sudo apt-get install -y openjdk-8-jdk --no-install-recommends
   - sudo pip install --quiet --upgrade pip tox tox-travis
+  - docker pull neo4j:latest
 
 script:
   - tox
