--- a/.coveragerc
+++ b/.coveragerc
@@ -3,7 +3,7 @@ branch = True
 source = boltkit
 omit =
     **/__main__.py
-    boltkit/obsolete/*
+    boltkit/legacy/*
 
 [report]
 # Regexes for lines to exclude from consideration
